export default {
  baseTemplate: {
    backButton: "base-template-back-button",
    finishButton: "base-template-finish-button",
    insertButton: "base-template-insert-button",
    searchInput: "base-template-search-input",
  },
  accountList: {},
  account: {
    parentCodePicker: "parent-code-picker",
    accountTypePicker: "account-type-picker",
    isReleasePicker: "is-release-picker",
    accountCodeInput: "code-input",
    accountNameInput: "account-name-input",
  },
  deleteDialog: {
    modalId: "delete-dialog-id",
    accountLabel: "delete-dialog-account-label",
    cancelButton: "delete-dialog-cancel-button",
    confirmButton: "delete-dialog-confirm-button",
  },
  messageDialog: {
    modalId: "message-dialog-id",
    messageLabel: "message-dialog-label",
    confirmButton: "message-dialog-confirm-button",
  },
};
