...
  const getRouteParams = () => navigation.getState()?.routes[navigation.getState()?.index].params;
  const isEditing = () => getRouteParams()?.accountId || false;

  const [isAccountScreen, setIsAccountScreen] = useState(isAccountRoute());
  const [isEditingAccount, setIsEditingAccount] = useState(isEditing());

  const headerLabel = !isAccountScreen ? "Plano de Contas" : isEditingAccount ? "Visualização/Edição" : "Inserir Conta";

  useEffect(() => {
    navigation.addListener("state", () => {
      setIsAccountScreen(isAccountRoute());
      setIsEditingAccount(isEditing());
    });
...
